# fractals

./: .gitignore  Makefile  fractals.cabal  todo.txt
src/: ASCII.hs  Animated.hs  Benchmark.hs  Complex.hs  Fractals.hs  Generator.hs  Gloss.hs  Image.hs  Main.hs  Mandelbrot.hs  OpenGL.hs  Properties.hs  Tests.hs
src/Fractals/: Area.hs  Args.hs  Coloring.hs  Complex.hs  Definitions.hs  Fractal.hs  Generator.hs  Geometry.hs  Image.hs  Lerp.hs  Math.hs  Output.hs  PNG.hs  Render.hs  Show.hs  Storage.hs  Utility.hs
src/Fractals/Coloring/: ASCII.hs  Greyscale.hs  Palette.hs
src/Fractals/Data/: Area.hs  Rectangle.hs  Size.hs  Vec2.hs
src/frontends/: Image.hs  Mandelbrot.hs  OpenGL.hs
src/frontends/GL/: Fractal.hs  Image.hs  Shaders.hs  Util.hs  Utility.hs
tests/: DocTest.hs  Main.hs  Properties.hs  Storage.hs
tests/Tests/: Coloring.hs  Utility.hs
tools/: html-mandelbrot.sh
