name:          fractals
version:       0.1.0.0
synopsis:      Render fractals
homepage:      github.com/daoo/fractals
license:       PublicDomain
author:        daoo
category:      Graphics
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Fractals.Area
    Fractals.Args
    Fractals.Coloring
    Fractals.Complex
    Fractals.Definitions
    Fractals.Math
    Fractals.Storage
    Fractals.Utility
  build-depends: base, fast-math, vector, JuicyPixels
  default-language: Haskell2010

executable fractals-ascii
  main-is: src/ASCII.hs
  build-depends: fractals, base
  default-language: Haskell2010

executable fractals-ascii-animated
  main-is: src/Animated.hs
  build-depends: fractals, base
  default-language: Haskell2010

executable fractals-image
  main-is: src/Image.hs
  build-depends: fractals, base, vector, JuicyPixels
  default-language: Haskell2010

executable fractals-opengl
  main-is: src/OpenGL.hs
  build-depends: fractals, base, mtl, bytestring, array, OpenGL, GLFW-b, stm
  default-language: Haskell2010

test-suite fractals-doctest
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: DocTest.hs
  build-depends: base, doctest
  default-language: Haskell2010
